--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -4,7 +4,8 @@
     "outDir": "../out-tsc/app",
     "module": "es2015",
     "types": [
-      "jquery"
+      "jquery",
+      "morris.js"
     ]
   },
   "exclude": [
